<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 分享相关 -->
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="sharing">分享操作正在后台进行…</string>
    <string name="share_to">分享到</string>
    <string name="share">分享</string>
    <string name="multi_share">图文分享</string>
    <string name="share_completed">分享成功</string>
    <string name="share_canceled">分享已取消</string>
    <string name="select_one_plat_at_least">请选择一个目标平台</string>
    <string name="list_friends">%s的朋友</string>
    <string name="share_failed">分享失败</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="refreshing">刷新中…</string>
    <string name="share_content">超级明星，酷炫壁纸！\n 大力推荐星酷娱乐！</string>
    
    <!-- 应用主要 -->
    <string name="app_name">星酷娱乐</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="offline_text1">网络不给力呀</string>
    <string name="offline_text2">请检查网络连接</string>
    <string name="month_day_year">yyyy-MM-dd EEE</string>

    <!-- about -->
    <string name="about_version">版本：测试版3.10</string>
    <string name="about_contactus">星酷</string>
    <string name="about_update">检查更新</string>
    <string name="about_share">分享给好友</string>
    <string name="about_rate">好评我们</string>
    <string name="about_web">官方网站</string>
    <string name="about_company">润华联动 出品</string>
    <string name="about_weburl">www.runhua.com</string>
    <string name="about_phone">010-12345678</string>
    <string name="about_other">xxxxxxxxxxxx</string>

    <!-- search -->
    <string name="search_id_empty">抱歉，您搜索的编号并不存在。</string>
    <string name="search_tag">标签搜索</string>
    <string name="search_tag_complete">找到以下相关标签</string>
    <string name="search_tag_empty">抱歉，没有找到“%1$s”的相关标签</string>
    <string name="search_id_no_title">编号搜索</string>
    <string name="search_id_no_description">每一张壁纸都有一个编号，输入编号能直接找到该壁纸。</string>
    <string name="search_clear_history">清空最近搜索</string>
    <string name="search_hint">请输入关键词</string>
    <string name="search_empty">没有找到 %1$s 相关搜索结果</string>

    <!-- gridview的下拉刷新 -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">查看更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>

    <!-- 登录注册 -->
    <string name="login_phonenum">手机号：</string>
    <string name="login_password">密码：</string>
    <string name="login_hint_phone">请输入手机号</string>
    <string name="login_hint_pass">请输入密码</string>
    <string name="login_lost_pass">忘记密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">马上注册</string>
    <string name="login_other_login">使用第三方帐号登录</string>
    <string name="login_weibo">新浪微博</string>
    <string name="login_weixin">微信</string>
    <string name="login_qq">腾讯QQ</string>
    <string name="reg_username">用户名：</string>
    <string name="reg_hint_username">请输入用户名</string>
    <string name="reg_pass">密码：</string>
    <string name="reg_hint_pass">请输入密码</string>
    <string name="reg_repass">确认：</string>
    <string name="reg_hint_repass">请再次输入密码</string>
    <string name="reg_phone">手机：</string>
    <string name="reg_hint_phone">请输入您的手机</string>
    <string name="reg_check">验证</string>
    <string name="reg_checknum">验证码：</string>
    <string name="reg_hint_checknum">请输入手机验证码</string>
    <string name="reg_login">马上登录</string>
    <string name="reg_reg">注册</string>

</resources>