<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/abs__background_holo_light"
    android:fillViewport="true"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/image_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/about_logo"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5.0dip"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3.0dip"
                android:text="@string/about_contactus"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/about_beta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_version"
                android:textColor="#333333"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/about_company"
                    android:textColor="@color/red"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/about_weburl"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@string/about_phone"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/about_other"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/about_linear1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/about_pdate"
                    style="@style/about_button"
                    android:text="@string/about_update" />

                <TextView
                    android:id="@+id/about_share"
                    style="@style/about_button"
                    android:text="@string/about_share" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/about_linear2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/about_rate"
                    style="@style/about_button"
                    android:text="@string/about_rate" />

                <TextView
                    android:id="@+id/about_webSite"
                    style="@style/about_button"
                    android:text="@string/about_web" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>