<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/abs__background_holo_light" >

    <include
        android:id="@+id/login_title"
        layout="@layout/title_one_button" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/login_title"
        android:layout_margin="5dp"
        android:background="@drawable/image_bg"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingTop="40dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="5.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="5dp" >

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center_vertical|left"
                    android:maxLines="1"
                    android:text="@string/login_phonenum"
                    android:textColor="@color/black"
                    android:textSize="@dimen/login_text" />

                <EditText
                    android:id="@+id/login_phone"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="3.0"
                    android:background="@drawable/search_text"
                    android:gravity="center_vertical"
                    android:hint="@string/login_hint_phone"
                    android:imeOptions="actionSearch"
                    android:inputType="phone"
                    android:textColor="#ff222222"
                    android:textColorHint="#ffaaaaaa"
                    android:textSize="@dimen/login_hint_text" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="5.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="5dp" >

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center_vertical|left"
                    android:text="@string/login_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/login_text" />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="3.0"
                    android:background="@drawable/search_text"
                    android:gravity="center_vertical"
                    android:hint="@string/login_hint_pass"
                    android:imeOptions="actionSearch"
                    android:inputType="textPassword"
                    android:textColor="#ff222222"
                    android:textColorHint="#ffaaaaaa"
                    android:textSize="@dimen/login_hint_text" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <TextView
                android:id="@+id/login_lostpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/login_lost_pass"
                android:textColor="@color/blue"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/login_login"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_margin="20dp"
                android:background="@drawable/set_logout_btn"
                android:gravity="center"
                android:text="@string/login_login"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/login_register"
                android:textColor="@color/blue"
                android:textSize="13sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/dot_line_gray" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/login_other_login"
                android:textColor="@color/red"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/login_weibo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/login_weibo"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/login_weibo"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/login_weixin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/login_weixin"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/login_weixin"
                    android:visibility="gone"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/login_qq"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/login_qq"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/login_qq"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>